fix(stepper): wrong spacings in header

--- a/projects/angular/src/accordion/stepper/_stepper.clarity.scss
+++ b/projects/angular/src/accordion/stepper/_stepper.clarity.scss
@@ -14,9 +14,11 @@
 @include mixins.exports('stepper.clarity') {
   .clr-stepper-forms {
     .clr-accordion-header-button {
-      padding: 0 0 0 tokens.$cds-global-space-8;
       align-items: center;
+      gap: tokens.$cds-global-space-9;
       min-height: mixins.baselinePx(56);
+      padding: tokens.$cds-global-space-5 tokens.$cds-global-space-9 tokens.$cds-global-space-5
+        tokens.$cds-global-space-10;
     }
 
     .clr-accordion-panel-inactive .clr-accordion-angle {
@@ -29,7 +31,6 @@
 
     .clr-accordion-status {
       min-width: tokens.$cds-global-space-14;
-      margin-left: tokens.$cds-global-space-7;
     }
 
     .clr-accordion-number {
@@ -40,7 +41,6 @@
 
     .clr-accordion-description {
       display: inline-block;
-      max-width: mixins.baselinePx(650);
 
       @media (min-width: accordion-variables.$clr-accordion-responsive-breakpoint) {
         margin-left: tokens.$cds-global-space-12;
